# cairo-dock-svn

trunk/cairo-dock/: INSTALL  Makefile.am  cairo-dock-update.sh  cairo-dock.pc.in  compile-all.sh  configure.ac  dox.config  generate-deb.sh  generate-translation.sh
trunk/cairo-dock/data/: 01BitTorrent.desktop  02fichiers.desktop  03terminal.desktop  04thunderbid.desktop  05web.desktop  06musique.desktop  ChangeLog.txt  Makefile.am  cairo-dock-easy-en.conf  cairo-dock-easy-fr.conf  cairo-dock-en.conf  cairo-dock-fr.conf  cairo-dock.conf  cairo-dock.conf.in  cairo-dock_easy-en.conf  cairo-dock_easy-fr.conf  cairo-dock_easy.conf  container.conf  launcher-en.conf  launcher-fr.conf  launcher.conf  main-dock.conf.in  readme-basic-view  themes-en.conf  themes-fr.conf  themes.conf
trunk/cairo-dock/data/default-theme/: Makefile.am  cairo-dock.conf
trunk/cairo-dock/data/emblems/: Makefile.am
trunk/cairo-dock/data/gauges/: Makefile.am
trunk/cairo-dock/data/themes/: Makefile.am
trunk/cairo-dock/doc/: HOW-TO__applets.txt  dox.config
trunk/cairo-dock/doc/html/: annotated.html  cairo-dock-animations_8c.html  cairo-dock-animations_8h-source.html  cairo-dock-animations_8h.html  cairo-dock-applet-facility_8h-source.html  cairo-dock-applet-facility_8h.html  cairo-dock-applet-factory_8c.html  cairo-dock-applet-factory_8h-source.html  cairo-dock-applet-factory_8h.html  cairo-dock-application-factory_8c.html  cairo-dock-application-factory_8h-source.html  cairo-dock-application-factory_8h.html  cairo-dock-applications-manager_8c.html  cairo-dock-applications-manager_8h-source.html  cairo-dock-applications-manager_8h.html  cairo-dock-callbacks_8c.html  cairo-dock-callbacks_8h-source.html  cairo-dock-callbacks_8h.html  cairo-dock-config_8c.html  cairo-dock-config_8h-source.html  cairo-dock-config_8h.html  cairo-dock-default-view_8c.html  cairo-dock-default-view_8h-source.html  cairo-dock-default-view_8h.html  cairo-dock-desktop-file-factory_8c.html  cairo-dock-desktop-file-factory_8h-source.html  cairo-dock-desktop-file-factory_8h.html  cairo-dock-dialogs_8c.html  cairo-dock-dialogs_8h-source.html  cairo-dock-dialogs_8h.html  cairo-dock-dock-factory_8c.html  cairo-dock-dock-factory_8h-source.html  cairo-dock-dock-factory_8h.html  cairo-dock-draw_8c.html  cairo-dock-draw_8h-source.html  cairo-dock-draw_8h.html  cairo-dock-file-manager_8h-source.html  cairo-dock-file-manager_8h.html  cairo-dock-global-variables_8h-source.html  cairo-dock-global-variables_8h.html  (+72 more)
trunk/cairo-dock/doc/latex/: annotated.tex  cairo-dock-animations_8c.tex  cairo-dock-animations_8h.tex  cairo-dock-applet-facility_8h.tex  cairo-dock-applet-factory_8c.tex  cairo-dock-applet-factory_8h.tex  cairo-dock-application-factory_8c.tex  cairo-dock-application-factory_8h.tex  cairo-dock-applications-manager_8c.tex  cairo-dock-applications-manager_8h.tex  cairo-dock-callbacks_8c.tex  cairo-dock-callbacks_8h.tex  cairo-dock-config_8c.tex  cairo-dock-config_8h.tex  cairo-dock-default-view_8c.tex  cairo-dock-default-view_8h.tex  cairo-dock-desktop-file-factory_8c.tex  cairo-dock-desktop-file-factory_8h.tex  cairo-dock-dialogs_8c.tex  cairo-dock-dialogs_8h.tex  cairo-dock-dock-factory_8c.tex  cairo-dock-dock-factory_8h.tex  cairo-dock-draw_8c.tex  cairo-dock-draw_8h.tex  cairo-dock-file-manager_8h.tex  cairo-dock-global-variables_8h.tex  cairo-dock-gui-factory_8c.tex  cairo-dock-gui-factory_8h.tex  cairo-dock-icons_8c.tex  cairo-dock-icons_8h.tex  cairo-dock-keyfile-manager_8c.tex  cairo-dock-keyfile-manager_8h.tex  cairo-dock-launcher-factory_8c.tex  cairo-dock-launcher-factory_8h.tex  cairo-dock-load_8c.tex  cairo-dock-load_8h.tex  cairo-dock-menu_8c.tex  (+28 more)
trunk/cairo-dock/po/: LINGUAS  Makefile.in.in  cairo-dock.pot  el.po  es.po  fr.po  generate-translation.sh  it.po  ja.po  sv.po  zh_CN.po
trunk/cairo-dock/src/: Makefile.am  cairo-dock-X-utilities.c  cairo-dock-X-utilities.h  cairo-dock-animations.c  cairo-dock-animations.c~  cairo-dock-animations.h  cairo-dock-applet-facility.c  cairo-dock-applet-facility.h  cairo-dock-applet-factory.c  cairo-dock-applet-factory.h  cairo-dock-applet-multi-instance.h  cairo-dock-applet-single-instance.h  cairo-dock-application-factory.c  cairo-dock-application-factory.h  cairo-dock-applications-manager.c  cairo-dock-applications-manager.h  cairo-dock-applications.c  cairo-dock-applications.h  cairo-dock-callbacks.c  cairo-dock-callbacks.h  cairo-dock-class-manager.c  cairo-dock-class-manager.h  cairo-dock-config.c  cairo-dock-config.h  cairo-dock-dbus-spec.h  cairo-dock-dbus.c  cairo-dock-dbus.h  cairo-dock-default-view.c  cairo-dock-default-view.h  cairo-dock-desklet.c  cairo-dock-desklet.h  cairo-dock-desktop-file-factory.c  cairo-dock-desktop-file-factory.h  cairo-dock-dialogs.c  cairo-dock-dialogs.h  cairo-dock-dock-factory.c  cairo-dock-dock-factory.c~  cairo-dock-dock-factory.h  cairo-dock-dock-factory.h~  cairo-dock-dock-manager.c  (+48 more)
trunk/themes/: Makefile.am  cairo-dock-finalize-theme.sh  configure.ac
trunk/themes/_Azur_/: Makefile.am  cairo-dock.conf  readme
trunk/themes/_Brit_/: Makefile  Makefile.am  Makefile.in  cairo-dock.conf  preview  readme
trunk/themes/_Clear_/: Makefile  Makefile.am  Makefile.in  cairo-dock.conf  cairo-dock_easy.conf  preview  readme
trunk/themes/_Cobalt_/: Makefile.am  cairo-dock.conf
trunk/themes/_Djoole_/: Makefile.am  cairo-dock.conf  readme
trunk/themes/_Glattering_/: Makefile.am  cairo-dock.conf
trunk/themes/_I_Cairo_/: Makefile.am  cairo-dock.conf  cairo-dock_easy.conf
trunk/themes/_MacOSX_/: Makefile.am  cairo-dock.conf  readme
trunk/themes/_Neon2_/: Makefile.am  cairo-dock.conf  cairo-dock_easy.conf  readme
trunk/themes/_Neon_/: Makefile.am  cairo-dock-indicator  cairo-dock.conf  cairo-dock_easy.conf  readme
trunk/themes/_TapisVert_/: Makefile.am  cairo-dock.conf
trunk/themes/_Ubuntu_/: Makefile.am  cairo-dock.conf
trunk/themes/_Verde_/: Makefile.am  cairo-dock.conf
trunk/themes/_Wood_/: Makefile.am  cairo-dock.conf  preview  readme
trunk/themes/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
(+880 files in other folders)
