
SUBDIRS = . themes

essentialdatadir = $(pkgdatadir)

essentialdata_DATA = \
	cairo-dock.conf\
	cairo-dock_easy.conf\
	launcher.conf\
	container.conf\
	separator.conf\
	themes.conf\
	cairo-dock.svg\
	cairo-dock-icon.svg\
	default-icon.svg\
	cairo-dock-ok.svg\
	cairo-dock-cancel.svg\
	readme-default-view\
	preview-default.png\
	ChangeLog.txt
	
