
SUBDIRS = . default-theme

essentialdatadir = $(pkgdatadir)

essentialdata_DATA = \
	cairo-dock.conf\
	cairo-dock_easy.conf\
	launcher.conf\
	container.conf\
	separator.conf\
	themes.conf\
	cairo-dock.svg\
	cairo-dock-icon.svg\
	default-icon.svg\
	cairo-dock-ok.svg\
	cairo-dock-cancel.svg\
	readme-default-view\
	preview-default.png\
	ChangeLog.txt\
	License\
	icon-gradation.png\
	icon-movment.png\
	icon-mouse.png\
	icon-speed.png\
	icon-subdock.png\
	icon-frame.png
	
