SUBDIRS = . launchers plug-ins icons

themedir = $(pkgdatadir)/_Clear_

theme_DATA = \
	cairo-dock.conf\
	readme\
	preview\
	cairo-dock-cancel.svg\
	cairo-dock-ok.svg\
	task-indicator-blue.svg\
	drop-indicator-starfall.png\
	alsamixer.svg\
	alsamixer-mute.svg\
	fusion.svg\
	ccsm.svg\
	emerald.svg

EXTRA_DIST = $(theme_DATA)
