SUBDIRS = . launchers plug-ins

themedir = $(pkgdatadir)/_Neon_

theme_DATA = \
        cairo-dock-cancel\
        cairo-dock-info\
        readme\
        cairo-dock.conf\
        cairo-dock-ok\
	cairo-dock-indicator\
        background-cairo-dock\
        cairo-dock_easy.conf\
        default\
        preview

