launchersdir = $(pkgdatadir)/_Azur_/launchers

launchers_DATA = \
	transmission-gtk.desktop\
	transmission.png\
	nautilus.desktop\
	nautilus.svg\
	gnome-terminal.desktop\
	terminal.svg\
	bmp.desktop\
	bmp.svg\
	05web.desktop\
	thunderbird.desktop\
	mozilla-thunderbird.svg\
	firefox.desktop\
	firefox.svg\
	pidgin.desktop\
	pidgin.svg\
	09system.desktop\
	container-system.svg\
	10synaptic.desktop\
	synaptic.svg\
	11gnome-system-monitor.desktop\
	utilities-system-monitor.svg\
	01ccsm.desktop\
	ccsm.svg\
	container-web.svg\
	gnome-terminal.svg\
	konsole.svg\
	xfce4-terminal.svg
