iconsdir = $(pkgdatadir)/_Brit_/icons

icons_DATA = \
	abiword.svg\
	adept.svg\
	amarok.svg\
	amsn.svg\
	amule.svg\
	audio-player.svg\
	beep-media-player.svg\
	bmp.svg\
	brasero.svg\
	ccsm.svg\
	cd-burner.svg\
	container-office.svg\
	download.svg\
	emacs.svg\
	emessene.svg\
	emule.svg\
	epiphany.svg\
	evolution.svg\
	file-browser.svg\
	filezilla.svg\
	firefox-3.0.svg\
	firefox.svg\
	folder_home.svg\
	gaim.svg\
	gedit.svg\
	gimp.svg\
	gnome-baker.svg\
	gnome-session-halt.svg\
	gnome-terminal.svg\
	graveman.svg\
	inkscape.svg\
	k3b.svg\
	kaffeine.svg\
	kate.svg\
	kmail.svg\
	konqueror.svg\
	konsole.svg\
	kopete.svg\
	ksysguard.svg\
	mail-reader.svg\
	messenger.svg\
	mozilla-thunderbird.svg\
	mplayer.svg\
	nautilus-cd-burner.svg\
	nautilus.svg\
	nomail.svg\
	ooo-template.svg\
	ooo-writer.svg\
	opera.svg\
	packages.svg\
	pacman-g2.svg\
	pcmanfm.svg\
	pidgin.svg\
	rhythmbox.svg\
	RSS.svg\
	show-desktop.svg\
	Stacks-Empty.svg\
	Stacks-Full.svg\
	stacks.svg\
	synaptic.svg\
	system-monitor.svg\
	terminal.svg\
	thunar.svg\
	totem.svg\
	user-home.svg\
	utilities-system-monitor.svg\
	video-player.svg\
	vlc.svg\
	web-browser.svg\
	writer.svg\
	xfce4-terminal.svg\
	xgamma.svg\
	xine.svg\
	xmms.svg\
	wifi0.svg\
	wifi1.svg\
	wifi2.svg\
	wifi3.svg\
	wifi-off.svg\
	trashcan_empty.svg\
	trashcan_full.svg\
	gnome-fs-client.svg\
	show-desktop.svg

EXTRA_DIST = $(icons_DATA)
