iconsdir = $(pkgdatadir)/_Clear_/icons

icons_DATA = \
	logoff.svg\
	abiword.svg\
	amarok.svg\
	amule.svg\
	audio-player.svg\
	beep-media-player.svg\
	bmp.svg\
	brasero.svg\
	cd-burner.svg\
	emacs.svg\
	evolution.svg\
	firefox.svg\
	gedit.svg\
	gimp.svg\
	gnome-baker.svg\
	gnome-terminal.svg\
	graphics.svg\
	graveman.svg\
	file-browser.svg\
	nautilus.svg\
	thunar.svg\
	konqueror.svg\
	pcmanfm.svg\
	inkscape.svg\
	k3b.svg\
	kaffeine.svg\
	kate.svg\
	kmail.svg\
	konsole.svg\
	ksysguard.svg\
	mail-reader.svg\
	mozilla-thunderbird.svg\
	mplayer.svg\
	nautilus-cd-burner.svg\
	ooo-calc.svg\
	ooo-impress.svg\
	ooo.svg\
	ooo-writer.svg\
	pidgin.svg\
	rhythmbox.svg\
	search.svg\
	system-monitor.svg\
	terminal.svg\
	totem.svg\
	ubuntu.svg\
	utilities-system-monitor.svg\
	video-player.svg\
	vlc.svg\
	writer.svg\
	xchat.svg\
	xfce4-terminal.svg\
	xine.svg\
	xmms.svg

EXTRA_DIST = $(icons_DATA)
