launchersdir = $(pkgdatadir)/_Clear_/launchers

launchers_DATA = \
	_01amule.desktop\
	_01brasero.desktop\
	01container.desktop\
	01firefox.desktop\
	_01fspot.desktop\
	_01gimp.desktop\
	01gnome-search-tool.desktop\
	01gnome-system-monitor.desktop\
	01gnome-terminal.desktop\
	_01inkscape.desktop\
	01launcher.desktop\
	01nautilus.desktop\
	01pidgin.desktop\
	01totem.desktop

EXTRA_DIST = $(launchers_DATA)
