launchersdir = $(pkgdatadir)/_Cobalt_/launchers

launchers_DATA = \
	00launcher.desktop\
	01firefox.desktop\
	01gnome-terminal.desktop\
	01launcher.desktop\
	01nautilus.desktop\
	01thunderbird.desktop\
	04launcher.desktop\
	05launcher.desktop\
	06launcher.desktop\
	bmp.desktop\
	brasero.desktop\
	f-spot.desktop\
	gimp-2.2.desktop\
	gnome-system-monitor.desktop\
	gthumb.desktop\
	ooo-calc.desktop\
	ooo-draw.desktop\
	ooo-writer.desktop\
	pidgin.desktop\
	synaptic.desktop\
	totem.desktop\
	update-manager.desktop\
	f-spot.svg\
	ooo-draw.svg\
	gimp.svg\
	ooo-writer.svg\
	gthumb.svg\
	mozilla-thunderbird.svg\
	messenger.svg\
	update-manager.svg\
	audio-player.svg\
	brasero.svg\
	synaptic.svg\
	utilities-system-monitor.svg\
	file-browser.svg\
	video-player.svg\
	firefox.svg\
	ooo-calc.svg\
	terminal.svg\
	container-system.svg\
	container-office.svg\
	container-multimedia.svg\
	container-image.svg\
	container-web.svg\
	xmms.svg\
	beep-media-player.svg\
	pidgin.svg\
	amsn.svg\
	emessene.svg\
	konsole.svg\
	xfce4-terminal.svg\
	xine.svg\
	pcmanfm.svg\
	gnome-terminal.svg\
	konqueror.svg\
	kaffeine.svg\
	nautilus.svg\
	bmp.svg\
	thunar.svg\
	rhythmbox.svg\
	mplayer.svg\
	gaim.svg\
	amarok.svg\
	vlc.svg\
	kopete.svg\
	totem.svg
