launchersdir = $(pkgdatadir)/_Djoole_/launchers

launchers_DATA = \
	01BitTorrent.desktop\
	01firefox.desktop\
	01gcalctool.desktop\
	01gnome-terminal.desktop\
	01nautilus.desktop\
	01thunderbird.desktop\
	01synaptic.desktop\
	01gnome-system-monitor.desktop\
	bittorrent.svg\
	calculator.svg\
	file-browser.svg\
	utilities-system-monitor.svg\
	mail-reader.svg\
	nautilus.svg\
	synaptic.svg\
	terminal.svg\
	web-browser.svg\
	firefox.svg\
	opera.svg\
	epiphany.svg\
	nautilus.svg\
	thunar.svg\
	pcmanfm.svg\
	konqueror.svg\
	mozilla-thunderbird.svg\
	kmail.svg\
	evolution.svg\
	transmission.svg\
	deluge.svg\
	bittornado.svg\
	gnome-btdownload.svg\
	ktorrent.svg\
	gnome-terminal.svg\
	konsole.svg\
	xfce4-terminal.svg\
	gnome-calculator.svg\
	crunch.svg

EXTRA_DIST = $(launchers_DATA)
