launchersdir = $(pkgdatadir)/_Glattering_/launchers

launchers_DATA = \
	01amarok.desktop\
	01ekiga.desktop\
	01evolution-mail.desktop\
	01firefox.desktop\
	01gimp-2.2.desktop\
	01gnome-terminal.desktop\
	01nautilus-cd-burner-open-iso.desktop\
	01nautilus.desktop\
	01pidgin.desktop\
	01synaptic.desktop\
	01vlc.desktop\
	amarok.svg\
	nautilus-cd-burner.svg\
	ekiga.svg\
	pidgin.svg\
	synaptic.svg\
	gimp.svg\
	vlc.svg\
	terminal.svg\
	file-browser.svg\
	web-browser.svg\
	mail-reader.svg\
	firefox.svg\
	opera.svg\
	epiphany.svg\
	nautilus.svg\
	konqueror.svg\
	thunar.svg\
	pcmanfm.svg\
	mozilla-thunderbird.svg\
	kmail.svg\
	evolution.svg\
	gnome-terminal.svg\
	konsole.svg\
	xfce4-terminal.svg
