launchersdir = $(pkgdatadir)/_I_Cairo_/launchers

launchers_DATA = \
	01amule.desktop\
	01filezilla.desktop\
	01firefox.desktop\
	01f-spot.desktop\
	01gimp.desktop\
	01gnome-terminal.desktop\
	01inkscape.desktop\
	01k3b.desktop\
	01ktorrent.desktop\
	01nautilus.desktop\
	01ooo-writer.desktop\
	01pidgin.desktop\
	01rhythmbox.desktop\
	01thunderbird.desktop\
	01totem.desktop\
	02launcher.desktop\
	1phone_black-gold.svg\
	1phone_chocolat.svg\
	1phone_ciel.jpg.svg\
	1phone_gold.svg\
	1phone_rose.svg\
	1phone_sombre.svg\
	1phone_vert.svg\
	writer.svg\
	amule.svg\
	background-cairo-dock-H.svg\
	background-cairo-dock-.svg\
	filezilla.svg\
	web-browser.svg\
	f-spot.svg\
	image.svg\
	inkscape.svg\
	cd-burner.svg\
	bittorrent.svg\
	irc.svg\
	music-2.svg\
	file-browser.svg\
	ooo-writer.svg\
	messenger.svg\
	audio-player.svg\
	session-halt.svg\
	ooo-calc.svg\
	terminal.svg\
	mail-reader.svg\
	video-player.svg\
	ubuntu-logo.svg\
	xmms.svg\
	firefox.svg\
	opera.svg\
	epiphany.svg\
	nautilus.svg\
	konqueror.svg\
	thunar.svg\
	pcmanfm.svg\
	kmail.svg\
	bmp.svg\
	amarok.svg\
	totem.svg\
	mozilla-thunderbird.svg\
	evolution.svg\
	beep-media-player.svg\
	rhythmbox.svg\
	mplayer.svg\
	vlc.svg\
	xine.svg\
	kaffeine.svg\
	gedit.svg\
	kate.svg\
	ooo-writer.svg\
	abiword.svg\
	emacs.svg\
	transmission.svg\
	deluge.svg\
	bittornado.svg\
	gnome-btdownload.svg\
	ktorrent.svg\
	nautilus-cd-burner.svg\
	graveman.svg\
	gnome-baker.svg\
	k3b.svg\
	brasero.svg\
	gimp.svg\
	krita.svg\
	gaim.svg\
	pidgin.svg\
	kopete.svg\
	amsn.svg\
	emessene.svg\
	xchat.svg\
	konversation.svg\
	kvirc.svg\
	gnome-terminal.svg\
	konsole.svg\
	xfce4-terminal.svg

