iconsdir = $(pkgdatadir)/_MacOSX_/icons

icons_DATA = \
	adept.svg\
	amsn.svg\
	brasero.svg\
	crunch.svg\
	emessene.svg\
	gaim.svg\
	gnome-baker.svg\
	gnome-calculator.svg\
	gnome-terminal.svg\
	graveman.svg\
	k3b.svg\
	konsole.svg\
	kopete.svg\
	ksysguard.svg\
	pacman-g2.svg\
	pidgin.svg\
	synaptic.svg\
	utilities-system-monitor.svg\
	xfce4-terminal.svg\
	amule.svg\
	beep-media-player.svg\
	bmp.svg\
	emacs.svg\
	emule.svg\
	eog.svg\
	epiphany.svg\
	evolution.svg\
	filezilla.svg\
	firefox.svg\
	f-spot.svg\
	gqview.svg\
	gwenview.svg\
	kate.svg\
	kmail.svg\
	konqueror.svg\
	mozilla-thunderbird.svg\
	mplayer.svg\
	nautilus-cd-burner.svg\
	nautilus.svg\
	ooo-writer.svg\
	pcmanfm.svg\
	thunar.svg\
	totem.svg\
	vlc.svg\
	xine.svg\
	xmms.svg\
	epsxe.svg\
	gnome-dev-harddisk.svg\
	gnome-nettool.svg\
	download.svg\
	showDesklets.svg\
	writer.svg\
	shortcuts.svg\
	system-monitor.svg\
	cd-burner.svg\
	gnomebaker.svg\
	gconf-editor.svg\
	inkscape.svg\
	gimp.svg\
	packages.svg\
	calculator.svg\
	audio-player.svg\
	mail-reader.svg\
	video-player.svg\
	messenger.svg\
	file-browser.svg\
	terminal.svg\
	web-browser.svg\
	image-reader.svg\
	ccsm.svg\
	ekiga.svg\
	abiword.svg\
	amarok.svg\
	ardour.svg\
	audacity.svg\
	blender.svg\
	eclipse.svg\
	gedit.svg\
	gnome-dictionary.svg\
	jack.svg\
	logviewer.svg\
	mandvd.svg\
	netscape.svg\
	quick.svg\
	skype.svg\
	ubuntu.svg\
	avidemux.svg\
	baobab.svg\
	beryl.svg\
	bluetooth.svg\
	compiz-fusion.svg\
	elisa.svg\
	etqw.svg\
	file-roller.svg\
	frontrow.svg\
	gajim.svg\
	ghostview.svg\
	glchess.svg\
	gnome-dev-ipod.svg\
	gnome-dev-media-sm.svg\
	gnome-fs-desktop.svg\
	gnome-fs-network.svg\
	gnome-fs-smb.svg\
	gparted.svg\
	kaffeine.svg\
	labyrinth.svg\
	ooo-calc.svg\
	opera.svg\
	palm-pilot.svg\
	pan.svg\
	rhythmbox.svg\
	scribus.svg\
	tomboy.svg\
	xchat.svg

EXTRA_DIST = $(icons_DATA)
