launchersdir = $(pkgdatadir)/_MacOSX_/launchers

launchers_DATA = \
	01ccsm.desktop \
	01ekiga.desktop \
	01evolution-mail.desktop \
	01firefox.desktop \
	01f-spot.desktop \
	01gnome-system-monitor.desktop \
	01gnome-terminal.desktop \
	01nautilus.desktop \
	01ooo-writer.desktop \
	01pidgin.desktop \
	01totem.desktop

EXTRA_DIST = $(launchers_DATA)
