iconsdir = $(pkgdatadir)/_Neon_/icons

icons_DATA = \
	abiword.png\
	amarok.png\
	amsn.png\
	amule.png\
	audio-player.png\
	beep-media-player.png\
	bmp.png\
	brasero.png\
	calculator.png\
	calendar.png\
	cd-burner.png\
	chat.png\
	container-system.svg\
	container-web.svg\
	crunch.png\
	deluge.png\
	eclipse.png\
	ekiga.png\
	gthumb.png\
	epiphany.png\
	evince.png\
	evolution.png\
	file-browser.png\
	file-roller.png\
	filezilla.png\
	firefox-3.0.png\
	firefox.png\
	f-spot.png\
	gedit.png\
	gimp.png\
	gnome-baker.png\
	gnome-calculator.png\
	gnome-control-center.png\
	gnome-panel-launcher.png\
	gnome-screenshot.png\
	gnome-search-tool.png\
	gnome-system-monitor.png\
	gnome-terminal.png\
	graveman.png\
	inkscape.png\
	internet.png\
	irc.png\
	k3b.png\
	kaffeine.png\
	kmail.png\
	konqueror.png\
	konsole.png\
	konversation.png\
	kvirc.png\
	mail-reader.png\
	mozilla-firefox.png\
	mozilla-thunderbird.png\
	mplayer.png\
	nautilus-cd-burner.png\
	nautilus.png\
	ooo-base.png\
	ooo-calc.png\
	ooo-draw.png\
	oofice.png\
	ooo-impress.png\
	ooo-writer.png\
	openoffice.png\
	opera.png\
	pcmanfm.png\
	pidgin2.png\
	pidgin3.png\
	pidgin4.png\
	pidgin.png\
	rhythmbox.png\
	session-halt.png\
	synaptic.png\
	terminal.png\
	thunar.png\
	thunderbird.png\
	totem.png\
	transmission.png\
	utilities-system-monitor.png\
	video-player.png\
	vlc.png\
	wifi.png\
	xchat.png\
	xfce4-terminal.png\
	xine.png\
	xmms.png\
	design.png\
	play.png\
	toolbox.png\
	electricity.png\
	cairo-dock.png
	
EXTRA_DIST = $(icons_DATA)
