launchersdir = $(pkgdatadir)/_Neon_/launchers

launchers_DATA = \
	01bmp.desktop\
	01brasero.desktop\
	01container.desktop\
	01firefox.desktop\
	01f-spot.desktop\
	01gcalctool.desktop\
	01gedit.desktop\
	01gimp.desktop\
	01gnome-screenshot.desktop\
	01gnome-system-monitor.desktop\
	01gnome-terminal.desktop\
	01gthumb.desktop\
	01inkscape.desktop\
	01nautilus.desktop\
	01ooo-base.desktop\
	01ooo-calc.desktop\
	01ooo-impress.desktop\
	01ooo-writer.desktop\
	01pidgin.desktop\
	01rhythmbox.desktop\
	01synaptic.desktop\
	01thunderbird.desktop\
	01totem.desktop\
	01transmission.desktop\
	01vlc.desktop\
	02container.desktop\
	02launcher.desktop\
	03container.desktop\
	04container.desktop\
	05container.desktop\
	06container.desktop\
	07container.desktop\
	12launcher.desktop\
	18launcher.desktop\
	24launcher.desktop\
	39launcher.desktop

EXTRA_DIST = $(launchers_DATA)
