launchersdir = $(pkgdatadir)/_Neon_/launchers

launchers_DATA = \
        01container.desktop\
        arrow_right.png\
        java.png\
        01launcher.desktop\
        attention.png\
        k3b.png\
        02container.desktop\
        audio-player.png\
        konsole.png\
        02launcher.desktop\
        baobab.png\
        lesMagasinsU.png\
        03container.desktop\
        biohazard.png\
        mail-reader.png\
        03launcher.desktop\
        blender.png\
        maya.png\
        04container.desktop\
        bluefish.png\
        mcdonalds.png\
        04launcher.desktop\
        bluetooth.png\
        mirc.png\
        05container.desktop\
        brasero.png\
        mozilla-firefox.png\
        05launcher.desktop\
        cairo-dock-icon.png\
        mozilla-thunderbird.png\
        06container.desktop\
        cairo-dock.png\
        nautilus.png\
        06launcher.desktop\
        cairo-dock-update.png\
        nc.png\
        07container.desktop\
        calc.png\
        netbeans.png\
        07launcher.desktop\
        calendar.png\
        oobase.png\
        08launcher.desktop\
        cd-burner.png\
        oocalc.png\
        09launcher.desktop\
        chat.png\
        oodraw.png\
        10launcher.desktop\
        clamav.png\
        oofice.png\
        11launcher.desktop\
        clock.png\
        ooimpress.png\
        12launcher.desktop\
        container-system.svg\
        oowriter.png\
        13launcher.desktop\
        container-web.svg\
        openoffice.png\
        14launcher.desktop\
        cursor.png\
        opera.png\
        15launcher.desktop\
        deluge.png\
        pause.png\
        16launcher.desktop\
        design.png\
        pidgin2.png\
        17launcher.desktop\
        divx.png\
        pidgin3.png\
        18launcher.desktop\
        eclipse.png\
        pidgin4.png\
        19launcher.desktop\
        ekiga.png\
        pidgin.png\
        20launcher.desktop\
        electricity.png\
        play.png\
        21launcher.desktop\
        eog.png\
        radiation.png\
        22launcher.desktop\
        epiphany.png\
        recycle.png\
        23launcher.desktop\
        evince.png\
        reload.png\
        24launcher.desktop\
        evolution.png\
        rew.png\
        25launcher.desktop\
        ff.png\
        rhythmbox.png\
        26launcher.desktop\
        file-roller.png\
        samurize.png\
        27launcher.desktop\
        filezilla.png\
        separateur\
        28launcher.desktop\
        firefox.png\
        session-halt.png\
        29launcher.desktop\
        flash.png\
        stop.png\
        30launcher.desktop\
        folder_darkblue.png\
        swiftfox.png\
        31launcher.desktop\
        folder_green.png\
        synaptic.png\
        32launcher.desktop\
        folder_orange.png\
        terminal.png\
        33launcher.desktop\
        folder.png\
        thunderbird.png\
        34launcher.desktop\
        folder_red.png\
        toolbox.png\
        35launcher.desktop\
        folder_yellow.png\
        totem.png\
        36launcher.desktop\
        f-spot.png\
        trackerd.png\
        37launcher.desktop\
        gedit.png\
        transmission.png\
        38launcher.desktop\
        gimp.png\
        trash_empty.png\
        39launcher.desktop\
        gnome-baker.png\
        trash_full.png\
        40launcher.desktop\
        gnome-calculator.png\
        trivial-pursuit.png\
        41launcher.desktop\
        gnome-control-center.png\
        ufw.png\
        42launcher.desktop\
        gnome-panel-launcher.png\
        user.png\
        43launcher.desktop\
        gnome-screenshot.png\
        utilities-system-monitor.png\
        44launcher.desktop\
        gnome-search-tool.png\
        video-player.png\
        45launcher.desktop\
        gnome-system-monitor.png\
        vlc.png\
        7z.png\
        gnome-terminal.png\
        wifi.png\
        abiword.png\
        gravure.png\
        wine.png\
        alarm.png\
        handycap.png\
        xchat.png\
        amarok.png\
        home.png\
        xfce4-terminal.png\
        amsn.png\
        hot.png\
        xine.png\
        amule.png\
        inkscape.png\
        xmms.png\
        apple.png\
        internet.png\
        arrow_left.png\
        irc.png

