launchersdir = $(pkgdatadir)/_TapisVert_/launchers

launchers_DATA = \
	abiword.svg\
	bitorrent.svg\
	download.desktop\
	download-folder.svg\
	amule.desktop\
	amule.svg\
	filezilla.desktop\
	filezilla.svg\
	firefox.desktop\
	firefox.svg\
	gedit.svg\
	gimp-2.2.desktop\
	gimp.svg\
	gnome-session-halt.svg\
	gnome.svg\
	gnome-terminal.desktop\
	terminal.svg\
	ktorrent.desktop\
	bittorrent.svg\
	kvirc.desktop\
	kvirc.svg\
	nautilus-home.desktop\
	file-browser.svg\
	ooo-calc.svg\
	ooo-draw.svg\
	ooo-writer.desktop\
	ooo-writer.svg\
	pidgin.desktop\
	messenger.svg\
	thunderbird.desktop\
	mail-reader.svg\
	ubuntu-logo.svg\
	utilities-system-monitor.svg\
	xchat.desktop\
	xchat.svg\
	nautilus.svg\
	thunar.svg\
	pcmanfm.svg\
	konqueror.svg\
	mozilla-thunderbird.svg\
	kmail.svg\
	evolution.svg\
	transmission.svg\
	deluge.svg\
	bittornado.svg\
	gnome-btdownload.svg\
	ktorrent.svg\
	gaim.svg\
	pidgin.svg\
	kopete.svg\
	amsn.svg\
	emessene.svg\
	gnome-terminal.svg\
	konsole.svg\
	xfce4-terminal.svg

EXTRA_DIST = $(launchers_DATA)
