launchersdir = $(pkgdatadir)/_Ubuntu_/launchers

launchers_DATA = \
	01bmp.desktop\
	01firefox.desktop\
	01gnome-terminal.desktop\
	01nautilus.desktop\
	01pidgin.desktop\
	01thunderbird.desktop\
	01synaptic.desktop\
	bmp.svg\
	nautilus.svg\
	mozilla-thunderbird.svg\
	firefox.svg\
	gnome-terminal.svg\
	pidgin.svg\
	synaptic.svg
