launchersdir = $(pkgdatadir)/_Verde_/launchers

launchers_DATA = \
	00launcher.desktop\
	01firefox.desktop\
	01gnome-terminal.desktop\
	01launcher.desktop\
	01nautilus.desktop\
	01thunderbird.desktop\
	04launcher.desktop\
	amule.desktop\
	bmp.desktop\
	ooo-calc.desktop\
	ooo-writer.desktop\
	pidgin.desktop\
	synaptic.desktop\
	totem.desktop\
	transmission-gtk.desktop\
	bmp.desktop\
	ooo-writer.svg\
	container-web.svg\
	container-multimedia.svg\
	container-office.svg\
	ooo-calc.svg\
	firefox.svg\
	mozilla-thunderbird.svg\
	synaptic.svg\
	file-browser.svg\
	messenger.svg\
	download.svg\
	bittorrent.svg\
	audio-player.svg\
	video-player.svg\
	terminal.svg\
	nautilus.svg\
	thunar.svg\
	pcmanfm.svg\
	xmms.svg\
	bmp.svg\
	amarok.svg\
	konqueror.svg\
	beep-media-player.svg\
	rhythmbox.svg\
	totem.svg\
	mplayer.svg\
	vlc.svg\
	xine.svg\
	kaffeine.svg\
	transmission.svg\
	deluge.svg\
	bittornado.svg\
	gnome-btdownload.svg\
	ktorrent.svg\
	amule.svg\
	filezilla.svg\
	gaim.svg\
	pidgin.svg\
	kopete.svg\
	amsn.svg\
	emessene.svg\
	gnome-terminal.svg\
	konsole.svg\
	xfce4-terminal.svg

EXTRA_DIST = $(launchers_DATA)
