iconsdir = $(pkgdatadir)/_Wood_/icons

icons_DATA = \
	ekiga.svg\
	firefox.svg\
	gimp.svg\
	pidgin.svg\
	vlc.svg\
	synaptic.svg\
	terminal.svg\
	file-browser.svg\
	mail-reader.svg\
	evolution.svg\
	nautilus.svg\
	konsole.svg\
	gnome-terminal.svg\
	thunar.svg\
	pcmanfm.svg\
	konqueror.svg\
	kmail.svg\
	mozilla-thunderbird.svg\
	xfce4-terminal.svg\
	cd-burner.svg\
	nautilus-cd-burner.svg\
	graveman.svg\
	gnome-baker.svg\
	k3b.svg\
	brasero.svg
	
EXTRA_DIST = $(icons_DATA)

